--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "next-cloudinary": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swiper": "^11.1.10"
+    "swiper": "^11.1.10",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
