--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
+    "mapbox-gl": "^3.6.0",
+    "maplibre-gl": "^4.6.0",
     "next": "14.2.5",
     "next-cloudinary": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7",
     "swiper": "^11.1.10",
     "yup": "^1.4.0"
   },
